--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_share_me
-description: Flutter Plugin for sharing contents to social media.You can use it share to Facebook , WhatsApp , Twitter And System Share UI. Support Url and Text.
+description: Flutter Plugin for sharing contents to social media.You can use it share to Facebook , WhatsApp And System Share UI. Support Url and Text.
 version: 1.2.0
 homepage: https://github.com/OpenFlutter/flutter_share_me
 publish_to: http://pub.dev
